--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
-    For more details:
+    For more details:xsxsxs
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
   <base href="/crm/">
