--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <!--
     If you are serving your web app in a path other than the root, change the
@@ -9,10 +8,10 @@
     The path provided below has to start and end with a slash "/" in order for
     it to work correctly.
 
-    For more details:xsxsxs
+    For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
   -->
-  <base href="/crm/">
+  <base href="/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
@@ -27,13 +26,12 @@
   <title>crm</title>
   <link rel="manifest" href="manifest.json">
 </head>
-
 <body>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '1116824849';
+    var serviceWorkerVersion = '1548313791';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
@@ -97,5 +95,4 @@
     }
   </script>
 </body>
-
 </html>
